<resources>
    <string name="app_name">Simba</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="todo">TODO</string>
    <string name="userid">UserID</string>
    <string name="password">Password:</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="create_account">Create Account</string>
    <string name="conform_password">Conform Password</string>
    <string name="full_name">Full Name</string>
    <string name="signup">SignUp</string>
    <string name="back_to_login">Back to Login</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_adduser">Add Distributor</string>
    <string name="action_addCylinder">Add Cylinder</string>
    <string name="action_addPurchOrde">Add Purchase order</string>
    <string name="action_addDiliverNote">Add delivery note</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Purchase</string>
    <string name="menu_slideshow">Sales</string>
    <string name="menu_dispatch">Dispatch</string>
    <string name="Signup">Signup</string>
    <string name="Login">Log In</string>
    <string name="enter_username_password">Please enter valid username and password.</string>
    <string name="logout">Sign out</string>
    <string name="dashboard">Dashboard</string>
    <string name="vendor_creation">Vendor Creatioin</string>
    <string name="company">Distributor</string>
    <string name="user">Customer</string>
    <string name="user_lst">Customer List</string>
    <string name="cylinder">Cylinder</string>
    <string name="product">Product</string>
    <string name="warehouse">Warehouse</string>
    <string name="acknowledge">Vendor Approval</string>
    <string name="dashboard_submenu">Submenu1</string>
    <string name="title_activity_splash_screen">Simba</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_company">Add Company</string>
    <string name="name">Name*</string>
    <string name="contact_percen_name">User Name:</string>
    <string name="address1">Address1:</string>
    <string name="address11">Address1</string>
    <string name="city">City:</string>
    <string name="city1">City</string>
    <string name="country">County:</string>
    <string name="country1">County</string>
    <string name="zipcode">ZipCode:</string>
    <string name="zipcode1">ZipCode</string>
    <string name="pin_number">Pin Number</string>
    <string name="pin_number11">Pin Number:</string>
    <string name="pin_number1">Tax Number</string>
    <string name="email">Email:</string>
    <string name="email1">Email</string>
    <string name="secondary_email">Secondary Email*</string>
    <string name="secondary_email_">Secondary Email:</string>
    <string name="secondary_email1">Secondary Email</string>
    <string name="mobile">Mobile:</string>
    <string name="mobile1">Mobile</string>
    <string name="secondary_mobile">Secondary Mobile*</string>
    <string name="secondary_mobile_">Secondary Mobile:</string>
    <string name="secondary_mobile1">Secondary Mobile</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="type">Type*</string>
    <string name="address2">Address2:</string>
    <string name="address2_">Address2:</string>
    <string name="add_user">Add User</string>
    <string name="cylinder_no">Cylinder No:</string>
    <string name="holding_capacity">Holding Capacity</string>
    <string name="holding_capacity1">Holding Capacity:</string>
    <string name="manufacturing_date">Manufacturing Date:</string>
    <string name="manufacturing_date1">Manufactruing Date</string>
    <string name="company_name">Name of company:</string>
    <string name="company_name_">Company Name:</string>
    <string name="company_name11">Name*</string>
    <string name="ContactPersonName">User Name:</string>
    <string name="company_name1">Company Name</string>
    <string name="valve_company_name">Valve Company Name:</string>
    <string name="valve_company_name1">Valve Company Name</string>
    <string name="purchase_date">Purchase Date:</string>
    <string name="purchase_date1">Purchase Date</string>
    <string name="expire_date">Expire Date:</string>
    <string name="expire_date1">Expire Date</string>
    <string name="paint_expire_month">Paint Expire Days:</string>
    <string name="paint_expire_month1">Paint Expire Days</string>
    <string name="testingPeriodMonth">Testing Period Days:</string>
    <string name="testingPeriodMonth1">Testing Period Days</string>
    <string name="alias">Alias</string>
    <string name="alias1">Alias:</string>
    <string name="unit">Unit</string>
    <string name="unit1">Unit:</string>
    <string name="code">Code</string>
    <string name="price">Price</string>
    <string name="un_number">UN Number</string>
    <string name="dot_classification">Dot Classification</string>
    <string name="dot_label">Dot Label</string>
    <string name="physical_state">Physical State</string>
    <string name="certificate">Certificate Text</string>
    <string name="add_product">Add Product</string>
    <string name="dectription">Decription</string>
    <string name="add_warehouse">Add Warehouse</string>
    <string name="lblName">Name:</string>
    <string name="admin_name">Company Name</string>
    <string name="lblAddress">Address</string>
    <string name="lblPinNumber">Pin Number</string>
    <string name="lblPhone">Phone</string>
    <string name="lblEmail">Email</string>
    <string name="lblStatus">Status</string>
    <string name="lblCreatedby">Created By</string>
    <string name="lblCreatedDate">Created Date</string>
    <string name="new_user">+ New User</string>
    <string name="pending">Pending</string>
    <string name="filled_cylinder">Filled Cylinder</string>
    <string name="empty_cylinder">Empty Cylinder</string>
    <string name="approved">Approved</string>
    <string name="rejected">Rejected</string>
    <string name="edit_user">Edit User</string>
    <string name="password1">Password</string>
    <string name="company_list">Distributor List</string>
    <string name="cylinder_list">Cylinder List</string>
    <string name="filters">Filters</string>
    <string name="filters1">Filled Cylinders Filters</string>
    <string name="filters11">Empty Cylinders Filters</string>
    <string name="Sort_By">Sort By</string>
    <string name="Sort_By1">Filled Cylinders Sort By</string>
    <string name="Sort_By11">Empty Cylinders Sort By</string>
    <string name="title_activity_user_detail">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="address">Address</string>
    <string name="phoneno">Phone</string>
    <string name="emaillbl">Email</string>
    <string name="user_type">User Type</string>
    <string name="apply">Apply</string>
    <string name="userParameter">User Sort By</string>
    <string name="adminName">Admin Name</string>
    <string name="texNumber">Pin Number:</string>
    <string name="texNumber_">Tex Number</string>
    <string name="companyType">Company Type</string>
    <string name="companySortBy">Company Sort By</string>
    <string name="companySortBy11">Order Sort By</string>
    <string name="companySortBy111">Sales Order Sort By</string>
    <string name="companySortBy1111">Sort By</string>
    <string name="companySortBy1">Sort By</string>
    <string name="remark">Remark</string>
    <string name="status">Status</string>
    <string name="txtAcknowledgeRemark">Acknowledge Remark</string>
    <string name="ackby">Acknowledge By</string>
    <string name="ackdatelbl">Acknowledge Date</string>
    <string name="approveAck">Approve Acknowledge</string>
    <string name="date">Date</string>
    <string name="username">User Name</string>
    <string name="per_month_req">Per Month Requirement</string>
    <string name="userRemark">User Remark</string>
    <string name="add_qr_code">Add QR Code: </string>
    <string name="Warehouse">Warehouse</string>
    <string name="Warehouse_">Warehouse:</string>
    <string name="manufacturing_company">Manufacturing Company</string>
    <string name="warehouse_list">Warehouse List</string>
    <string name="action_addWarehouse">Add Warehouse</string>
    <string name="purchaseorder">Purchase Order</string>
    <string name="cylinderproductmapping">Cylinder Product Mapping</string>
    <string name="repot">Report</string>
    <string name="cylinder_warehouse_mapping">Cylinder Warehouse Mapping</string>
    <string name="permission">Permission</string>
    <string name="delivery_note">Driver Delivery Note</string>
    <string name="delivery_note_">Delivery Note:</string>
    <string name="sales_order">Client Delivery Note</string>
    <string name="return_order">Return Order</string>
    <string name="action_addCylinderProductMapping">Add Cylinder Product Mapping</string>
    <string name="action_addCylinderWarehouseMapping">Add Cylinder Prouduct Mapping</string>
    <string name="fromWharehouse">From Warehouse:</string>
    <string name="fromUser">User:</string>
    <string name="towarehouse">To Warehouse:</string>
    <string name="FillingDate">Filling Date:</string>
    <string name="Product">Product:</string>
    <string name="Quantity">Qty of Gas:</string>
    <string name="Quantity1">Qty of Gas</string>
    <string name="Purity">Purity:</string>
    <string name="GaugePressure">Gauge Pressure:</string>
    <string name="Impurities">Impurities:</string>
    <string name="fillCylinderSortBy">Fill Cylinder Sort by</string>
    <string name="client_info">1. Client Information</string>
    <string name="purchase_order_detial">2. Purchase Order Details</string>
    <string name="PO_Number">PO Number:</string>
    <string name="PO_Date">PO Date:</string>
    <string name="UserName">User Name:</string>
    <string name="UserName1">User Name</string>
    <string name="POGeneratedBy">PO Generated By:</string>
    <string name="SOGeneratedBy">SO Generated By:</string>
    <string name="save_and_continue"><![CDATA[Save & Continue]]></string>
    <string name="add">Add</string>
    <string name="save_as_draft">Save as Draft</string>
    <string name="cylinderQunatity">Qty of Cylinder:</string>
    <string name="Delivery_Note_List">Driver Delivery Note List</string>
    <string name="delivery_note_detials">2. Delivery Note Detials</string>
    <string name="DN_Number">DN Number:</string>
    <string name="DN_Number1">DN Number</string>
    <string name="DN_Date">DN Date:</string>
    <string name="ROCylinderWarehouseMapping">RO Cylinder Warehouse Mapping</string>
    <string name="reconciliation">Reconciliation</string>
</resources>