<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".ui.product.AddProductActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/txtLblName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/lblForm"
            android:layout_marginTop="10dp"
            android:text="@string/name" />

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/txtAlias"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/lblForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/alias" />
        <EditText
            android:id="@+id/edtAlias"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />

        <TextView
            android:id="@+id/txtUnit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/lblForm"
            android:text="@string/unit" />
        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/spinner_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"></androidx.appcompat.widget.AppCompatSpinner>
        <TextView
            android:id="@+id/txtCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/lblForm"
            android:text="@string/code" />
        <EditText
            android:id="@+id/edtCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
        <TextView
            android:id="@+id/txtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/lblForm"
            android:text="@string/price" />
        <EditText
            android:id="@+id/edtPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
        <TextView
            android:id="@+id/txtUnNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/lblForm"
            android:text="@string/un_number" />
        <EditText
            android:id="@+id/edtUnNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
        <TextView
            android:id="@+id/txtDotClassification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/lblForm"
            android:text="@string/dot_classification" />
        <EditText
            android:id="@+id/edtDotClassification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="" />
        <TextView
            android:id="@+id/txtDotLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/lblForm"
            android:text="@string/dot_label" />
        <EditText
            android:id="@+id/edtDotLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="" />
        <TextView
            android:id="@+id/txtPisicalStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/lblForm"
            android:text="@string/physical_state" />
        <EditText
            android:id="@+id/edtPhysicalState"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="" />
        <TextView
            android:id="@+id/txtCertificate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textSize="@dimen/lblForm"
            android:text="@string/certificate" />
        <EditText
            android:id="@+id/edtcertificate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:text="" />
        <LinearLayout
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"/>
            <Button
                android:id="@+id/btnCancel"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>